<resources>
    <string name="app_name">라이프체커</string>
    <string name="profile">"프로필"</string>
    <string name="record">"기록"</string>
    <string name="community">"커뮤니티"</string>
    <string name="more">"더보기"</string>
    <string name="squircle_discription">squircle</string>
    <string name="timer">"타이머"</string>
    <string name="tutorial">"사용설명"</string>
    <string name="notice">"공지사항"</string>
    <string name="logout">"로그아웃"</string>
    <string name="nullUserName">사용자 이름</string>
    <string name="nullDays">%1$s일</string>
    <string name="correction">수정하기</string>
    <string name="userInformWeight">몸무게: %1$.1fkg</string>
    <string name="userInformHeight">키: %1$.1fcm </string>
    <string name="progressText">%1$s  %2$s %3$s/%4$s</string>
    <string name="logoutConfirm">"로그아웃 하시겠습니까?"</string>
    <string name="backPressedTwice">"한 번 더 누르면 종료합니다."</string>
    <string name="allDayText">전체</string>
    <string name="workoutDayText">운동</string>
    <string name="dietDayText">식단</string>
    <string name="goalWeight">목표: %1$skg</string>
    <string name="currentWeight">오늘: %1$skg (%2$s%3$s)</string>
    <string name="cancel">"취소"</string>
    <string name="inquiry">문의하기</string>
    <string name="notice231107">[공지사항] 어플 출시</string>
    <string name="notice231107detail">\n&lt; 라이프체커 &gt;\n어플이 출시되었습니다!\n\n
        우리 어플은, \n매일의 건강 기록을 도와주는 어플입니다.\n
        기존의 어플들에는 내가 먹은 음식을 일일히 찾아서 기록해야하는 번거로움이 있습니다.\n\n
        하지만 건강관리를 꾸준히 하시는 분들에게는 건강식을 먹은 것이 오늘 뿐만이 아닐 것입니다.\n\n
        어제 먹은 음식을 오늘 또 먹고, 오늘 먹은 음식을 내일 또 먹을 분들을 위해, \n\n
        내가 먹는 음식의 칼로리 정도야 대충은 다 알고있다는 분들을 위해,\n\n
        최대한 간단하게 매일을 기록할 수 있도록 어플을 만들었습니다.
        \n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n</string>
    <string name="whatIsNormalWeight">일상생활에서 건강을 유지하기 위한 적절한 체중을 표준 체중이라 하며, 이는 성별과 신장에 따라 달라집니다.\n표준 체중을 유지하는 것만으로도 여러 질병에 걸릴 위험성과 질병에 의한 사망률을 낮출 수 있다고 알려져 있습니다.\n
        </string>
    <string name ="myNormalWeight">따라서 나의 표준체중은 %1$skg 입니다.\n\n표준체중은 어디까지나 참고사항이며 본인의 상황을 고려하여 판단하시길 바랍니다.</string>
    <string name="whatIsCalorie">하루에 섭취 할 음식의 열량은 각자의 표준 체중과 활동 정도에 따라 다릅니다.\n활동성에 따라 표준 체중에 25~35(칼로리/일)을 곱한 값이 권장 칼로리가 됩니다.
        \n\n개인에 따라 필요한 칼로리 양이 다를 수 있으니 상황과 목적을 고려하여 판단하시길 바랍니다.
    </string>
</resources>