<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/more"
            android:textSize="@dimen/top_menu_name_size"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_marginBottom="@dimen/top_menu_bottom_margin"

            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <android.widget.Button
            android:id="@+id/moreNoticeButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/notice"
            android:textAlignment="textStart"
            android:background="@drawable/more_button_design"
            android:layout_margin="10dp"
            android:padding="10dp"
            android:textSize="20sp"
            />
        <!--<android.widget.Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tutorial"
            android:textAlignment="textStart"
            android:background="@drawable/more_button_design"
            android:layout_margin="10dp"
            android:padding="10dp"
            android:textSize="20sp"
            />-->
        <android.widget.Button
            android:id="@+id/moreTimerButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/timer"
            android:textAlignment="textStart"
            android:background="@drawable/more_button_design"
            android:layout_margin="10dp"
            android:padding="10dp"
            android:textSize="20sp"
            />

        <android.widget.Button
            android:id="@+id/moreLogoutButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="textStart"
            android:background="@drawable/more_button_design"
            android:text="@string/logout"
            android:layout_margin="10dp"
            android:padding="10dp"
            android:textSize="20sp"
            />

    </LinearLayout>
</LinearLayout>