<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileSettingActivity"
    >
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >
            <ImageView
                android:id="@+id/background_image"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:src="@color/bottom_nav_icon"
                />

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    ><ImageView
    android:id="@+id/profile_image"
    android:layout_width="80dp"
    android:layout_height="80dp"
    android:layout_gravity="center_vertical"
    android:src="@drawable/profile_profile_button_design"
    android:layout_margin="10dp"
    />
    <TextView
        android:id="@+id/userName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="사용자 이름"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_gravity="center_vertical"
        />


</LinearLayout>

            <TextView
                android:id="@+id/userInformHeight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/userInformHeight"
                android:textSize="17sp"
                android:layout_margin="7dp"
                />
            <TextView
                android:id="@+id/userInformWeight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/userInformWeight"
                android:textSize="17sp"
                android:layout_margin="7dp"
                />
            <android.widget.Button
                android:id="@+id/userInformCorrectionButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/correction"
                />

        </LinearLayout>
    </ScrollView>
</FrameLayout>